--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,9 +1,5 @@
 ---
-import ResponsiveToggle from "./ResponsiveToggle.astro";
 import { Image } from "astro:assets";
-import NavLink from "./widgets/NavLink.astro";
-import { navBarLinks, socialLinks } from "../navigation";
-import FooterSocialLink from "./widgets/FooterSocialLink.astro";
 import logo from "../assets/images/logolovosis.svg";
 ---
 
@@ -21,17 +17,26 @@ import logo from "../assets/images/logolovosis.svg";
       src={logo}
       alt="Lovosis Technology U.A.E"
       loading={"eager"}
-
-
     />
   </a>
   <nav class="header-links contents font-semibold text-base lg:text-lg">
     <ul class="flex items-center ml-4 xl:ml-8 mr-auto">
-
-      {navBarLinks.map(link => (
-        <NavLink url={link.url} name={link.name} />
-      ))}
-     
+      <li class="p-3 xl:p-6 active"><a href="/">Home</a></li>
+      <li class="p-3 xl:p-6 active">
+        <a href="/productsnew">
+          Products
+        </a>
+      </li>
+      <li class="p-3 xl:p-6 active">
+        <a href="/services">
+          Services
+        </a>
+      </li>
+      <li class="p-3 xl:p-6 active">
+        <a href="/contact">
+          Contact US
+        </a>
+      </li>
     </ul>
   </nav>
 
@@ -118,15 +123,36 @@ import logo from "../assets/images/logolovosis.svg";
     />
   </a>
     <div class="md:hidden">
-      <ResponsiveToggle />
+      <button id="collapseBtn"  aria-expanded="false" aria-label="Open menu navigation" class="border-1 p-4">
+        <svg width="26" height="21" aria-hidden="true" fill="#000000" xmlns="http://www.w3.org/2000/svg"
+          ><path
+            d="M2 1.667h24m-24 8h24m-24 8h 24"
+            stroke="#000"
+            stroke-width="2.667"
+            stroke-linecap="round"
+            stroke-linejoin="round"></path>
+        </svg>
+      </button>
     </div>
   </div>
   <div id="collapseContent" class="hidden">
     <ul class="items-center ml-4 xl:ml-8 mr-auto text-black">
-      {navBarLinks.map(link => (
-        <NavLink url={link.url} name={link.name} />
-      ))}
-    
+      <li class="p-3 xl:p-6 active"><a href="/">Home</a></li>
+      <li class="p-3 xl:p-6 active">
+        <a href="/products">
+          Products
+        </a>
+      </li>
+      <li class="p-3 xl:p-6 active">
+        <a href="/services">
+          Services
+        </a>
+      </li>
+      <li class="p-3 xl:p-6 active">
+        <a href="/contact">
+          Contact US
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
@@ -151,5 +177,12 @@ import logo from "../assets/images/logolovosis.svg";
     
     ev.preventDefault();
     windowScroll();
+  });
+
+  const collapseButton = document.getElementById('collapseBtn');
+  const collapsibleContent = document.getElementById('collapseContent');
+
+  collapseButton!.addEventListener('click', () => {
+      collapsibleContent!.classList.toggle('hidden');
   });
 </script>
