--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import "../assets/styles/tailwind.css";
 import { SEO } from "astro-seo";
-import HeaderComponents from "../components/HeaderComponents.astro";
+import Navbar from "../components/Navbar.astro";
 import FooterSections from "../components/FooterSections.astro";
 import Whatsapp from "../components/Whatsapp";
 import GoogleAnalytics from "../components/GoogleAnalytics.astro";
@@ -111,7 +111,7 @@ const structuredData = {
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MSCJSN6S"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
-    <HeaderComponents />
+    <Navbar />
     <!-- <div class="mx-auto max-w-screen-2xl px-4 sm:px-6 lg:px-8"> -->
     <div class="mx-auto max-width-8xl px-0 sm:px-0 lg:px-0">
       <main>
