--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import HeroComponents from "../components/HeroComponents.astro";
 import FeatureComponents from "../components/FeatureComponents.astro";
 import DigiComponents from "../components/DigiComponents.astro";
-import Slider from "../components/Slider";
+import Slider from "../components/Slider.astro";
 import FAQ from "../components/FAQ.astro";
 const title: string =
   "Hikvision dealer in Dubai | Best Hikvision dealer in Dubai,U.A.E";
@@ -17,6 +17,6 @@ const description: string = "Premier Hikvision distributor in Dubai, UAE. Explor
   <div class="grid grid-cols-1 pb-6 text-center text-white text-4xl mt-8">
     Latest Hikvision products in UAE
   </div>
-  <Slider client:load />
+  <Slider/>
   <FAQ />
 </Layout>
