--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -37,11 +37,16 @@ import logo from "../assets/images/logolovosis.svg";
           Contact US
         </a>
       </li>
+      <li class="p-3 xl:p-6 active">
+        <a href="/blogs">
+          Blog
+        </a>
+      </li>
     </ul>
   </nav>
 
   <nav class="hidden sm:block xl:contents">
-    <ul class="flex items-center mr-4 lg:mr-6 xl:mr-8 gap-2 md:mt-8 lg:mb-6 flex-wrap justify-center gap-6 md:gap-8">
+    <ul class="flex items-center mr-4 lg:mr-6 xl:mr-8 gap-2 md:mt-8 lg:mb-6 flex-nowrap justify-center gap-6 md:gap-8">
       <!-- Facebook -->
       <li>
         <a
