--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,9 +14,9 @@ const description: string = "Premier Hikvision distributor in Dubai, UAE. Explor
   <HeroComponents />
   <FeatureComponents />
   <DigiComponents />
-  <div class="grid grid-cols-1 pb-6 text-center text-white text-4xl mt-8">
+  <!-- <div class="grid grid-cols-1 pb-6 text-center text-white text-4xl mt-8">
     Latest Hikvision products in UAE
-  </div>
+  </div> -->
   <Slider/>
   <FAQ />
 </Layout>
